<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context=".ventas">

    <EditText
        android:id="@+id/txtNitVentas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtNitVentas"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#BCAAA4"
        android:textColorHint="#BCAAA4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblClienteVentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblNombreCliente"
        android:textColor="#BCAAA4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNitVentas" />

    <Button
        android:id="@+id/btnBuscarVentas"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnBuscar"
        android:backgroundTint="#004D40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblClienteVentas" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#FAF6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarVentas" />

    <EditText
        android:id="@+id/txtCodigoVentas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtCodigo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#BCAAA4"
        android:textColorHint="#BCAAA4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/lblDescripcionVentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="#BCAAA4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigoVentas"
        tools:text="@string/lblDescripcion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="73dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/lblCantidad"
        android:textAlignment="center"
        android:textColor="#BCAAA4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescripcionVentas" />

    <EditText
        android:id="@+id/txtCantidadVentas"
        android:layout_width="163dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtCantidad"
        android:inputType="textShortMessage|number|textPersonName"
        android:minHeight="48dp"
        android:textColor="#BCAAA4"
        android:textColorHint="#BCAAA4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescripcionVentas" />

    <Button
        android:id="@+id/btnLimpiarVentas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00796B"
        android:text="@string/btnLimpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGrabarVentas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#004D40"
        android:text="@string/btnGrabar"
        app:layout_constraintBottom_toTopOf="@+id/btnLimpiarVentas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGrabarProVentas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00796B"
        android:text="@string/btnSsiguiente"
        app:layout_constraintBottom_toTopOf="@+id/btnGrabarVentas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>